# Temi

./: .할일.txt.swp  README.md  bluez-5.45.tar.xz  package.xml  setup.py  temi.py  temi_copy.py  test_serbo.py  모터제어방법  핀번호.xlsx  할일.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/Temi/share/Temi/: package.dsv  package.xml
install/temi/lib/temi/: temi.py
install/temi/share/temi/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/temi_msgs/share/temi_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/temi_msgs/share/temi_msgs/cmake/: ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_temi_msgs__rosidl_generator_cExport-noconfig.cmake  export_temi_msgs__rosidl_generator_cExport.cmake  export_temi_msgs__rosidl_generator_cppExport.cmake  export_temi_msgs__rosidl_generator_pyExport.cmake  export_temi_msgs__rosidl_typesupport_fastrtps_cExport.cmake  temi_msgsConfig.cmake  temi_msgs__rosidl_typesupport_cExport-noconfig.cmake  temi_msgs__rosidl_typesupport_cppExport-noconfig.cmake  temi_msgs__rosidl_typesupport_cppExport.cmake  temi_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  temi_msgs__rosidl_typesupport_introspection_cExport.cmake  temi_msgs__rosidl_typesupport_introspection_cppExport.cmake
install/temi_msgs/share/temi_msgs/environment/: ament_prefix_path.sh  path.sh
log/: latest_build  latest_list
src/: README.md  setup.cfg  setup.py
src/car_movement_control_py/: package.xml  setup.cfg  setup.py
src/car_movement_control_py/car_movement_control_py/: car_control.py  car_forward.py
src/temi/: package.xml  setup.cfg  setup.py
src/temi/temi/: .control.py.swp  .temi.py.swp  .ultrasonic_pub.py.swp  bluetooth.py  bluetooth_node.py  control.py  dcmotor_node.py  multi_thread_node.py  servo_node.py  temi.py  ultrasonic_pub.py  ultrasonic_sub.py
src/temi_msgs/: CMakeLists.txt  package.xml
src/temi_msgs/msg/: MotorControl.msg  Servo.msg  Transform.msg  Ultrasonic.msg  Velocity.msg
test/: .gpt.py.swp  .test_motor.py.swp  error.txt  find_uuid.py  gpt.py  h.py  servo.py  test_bluetooth.py  test_bt.py  test_motor (copy).py  test_motor.py  test_serbo (copy).py  test_serbo_multi (copy).py  test_servo_1115.py  ㅁㅁ
test/Adafruit_Python_PCA9685-master/: .test_serbo.py.swp  test_Sevor1.py  test_serbo.py
(+15 files in other folders)
